# JereIDER

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml  tests.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/code/: Cargo.toml
crates/code/src/: code_view.rs  edit.rs  lib.rs
crates/command/: Cargo.toml
crates/command/src/: command_view.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  cursor.rs  lib.rs  state.rs  text_utils.rs
crates/core/tests/: core_tests.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/main-window/: Cargo.toml
crates/main-window/src/: lib.rs
crates/menu/: Cargo.toml
crates/menu/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/style/: Cargo.toml
crates/style/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/syntax/tests/: syntax_tests.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
crates/text/tests/: text_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: dialog.rs  edit.rs  lib.rs  main_view.rs  sliding_panel.rs  status_bar.rs  tab_strip.rs  title_bar.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
src/: main.rs  main_view.rs  menu.rs  syntax.rs  text_editor.rs  window_controls.rs
src/editor/: cursor.rs  mod.rs
src/ui/: main_view.rs  mod.rs  status_bar.rs  title_bar.rs
