[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/style",
    "crates/text",
    "crates/syntax",
    "crates/menu",
    "crates/window",
    "crates/ui",
    "crates/code",
    "crates/command",
    "crates/fs",
]
resolver = "2"

[profile.dev]
# Saves space
debug = 0

# Fast compile
opt-level = 0

# Reduces cache
incremental = true

[profile.dev.build-override]
# Speed
opt-level = 0
